--- a/edureka_itertools1.ipynb
+++ b/edureka_itertools1.ipynb
@@ -756,8 +756,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "5e614109-86bc-4f11-8748-b8fb41a73bd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 5, 10, 15, 20, 25, 30, 35, 40, 45, 50, 55, 60, 65, 70, 75, 80, 85, 90, 95]\n",
+      "0\n",
+      "15\n",
+      "30\n",
+      "45\n",
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "islice()\n",
+    "\n",
+    "    Make an iterator that returns selected elements from the iterable. \n",
+    "    If start is non-zero, then elements from the iterable are skipped until start is reached. \n",
+    "    Afterward, elements are returned consecutively unless step is set higher than one which results in items being skipped. \n",
+    "    If stop is None, then iteration continues until the iterator is exhausted, if at all; otherwise, it stops at the specified position. \n",
+    "    Unlike regular slicing, `islice()` does not support negative values for start, stop, or step. \n",
+    "    Can be used to extract related fields from data where the internal structure has been flattened (for example, a multi-line report may list a name field on every third line). \n",
+    "    \n",
+    "    In the example, it starts from 0 index to the 15th index and stepped by 3\n",
+    "\"\"\"\n",
+    "\n",
+    "c = list(range(0, 100, 5))\n",
+    "print(c)\n",
+    "b = islice(c, 0, 15, 3)\n",
+    "for i in b:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8e65d3b2-d454-46ce-9f0e-86cea38a463c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "(6, 4)\n",
+      "(8, 6)\n",
+      "(10, 8)\n",
+      "(12, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "starmap()\n",
+    "\n",
+    "    Make an iterator that computes the function using arguments obtained from the iterable. \n",
+    "    Used instead of map() when argument parameters are already grouped in tuples from a single iterable (the data has been “pre-zipped”). \n",
+    "    The difference between map() and starmap() parallels the distinction between function(a,b) and function(*c). \n",
+    "    \n",
+    "    In the example it takes the first value of each tuple and adds it 3, skipping the second value of the tuples.\n",
+    "\"\"\"\n",
+    "\n",
+    "a = [(1, 2), (3, 4), (5, 6), (7, 8)]\n",
+    "b = starmap(lambda x, y: x+3, a)\n",
+    "for i in b:\n",
+    "    print(i)\n",
+    "    \n",
+    "c = starmap(lambda x, y: (x+5, y+2), a)\n",
+    "for i in c:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "946fb638-bf6e-46ee-949a-80970a9dd5f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "10\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "takewhile()\n",
+    "    Make an iterator that returns elements from the iterable as long as the predicate is true.\n",
+    "\"\"\"\n",
+    "a = list(range(0, 100, 5))\n",
+    "b = takewhile(lambda x: x < 20, a)\n",
+    "for i in b:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "8c38f37b-ddf7-475f-ba0b-49dd0f998609",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "tee()\n",
+    "\n",
+    "    Return n independent iterators from a single iterable.\n",
+    "\n",
+    "    The following Python code helps explain what tee does (although the actual implementation is more complex and uses only a single underlying FIFO queue).\n",
+    "\"\"\"\n",
+    "a = [1, 2, 3, 4, 5]\n",
+    "at = iter(a)\n",
+    "b = tee(at, 5)\n",
+    "for i in b:\n",
+    "    print(list(i))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "1f8f691b-eeb3-4be7-97ec-1e8180895a90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2)\n",
+      "(3, 4)\n",
+      "(5, 6)\n",
+      "(7, 8)\n",
+      "(9, 10)\n",
+      "(11, 10)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "zip_longest()\n",
+    "\n",
+    "    Make an iterator that aggregates elements from each of the iterables. \n",
+    "    If the iterables are of uneven length, missing values are filled-in with fillvalue. \n",
+    "    Iteration continues until the longest iterable is exhausted.\n",
+    "\"\"\"\n",
+    "\n",
+    "a = [1, 3, 5, 7, 9, 11]\n",
+    "b = [2, 4, 6, 8]\n",
+    "\n",
+    "c = zip_longest(a, b, fillvalue=10)\n",
+    "for i in c:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "a53eaf04-defd-4783-83a5-32541d5558ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 [(1, 2)]\n",
+      "4 [(3, 4)]\n",
+      "6 [(5, 6)]\n",
+      "8 [(7, 8)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "groupby()\n",
+    "\n",
+    "    Make an iterator that returns consecutive keys and groups from the iterable. The key is a function computing a key value for each element. \n",
+    "    If not specified or is None, key defaults to an identity function and returns the element unchanged. \n",
+    "    Generally, the iterable needs to already be sorted on the same key function.\n",
+    "\n",
+    "    The operation of groupby() is similar to the uniq filter in Unix. It generates a break or new group every time the value of the key function \n",
+    "    changes (which is why it is usually necessary to have sorted the data using the same key function). \n",
+    "    That behavior differs from SQL’s GROUP BY which aggregates common elements regardless of their input order.\n",
+    "\n",
+    "    The returned group is itself an iterator that shares the underlying iterable with groupby(). \n",
+    "    Because the source is shared, when the groupby() object is advanced, the previous group is no longer visible. \n",
+    "\"\"\"\n",
+    "\n",
+    "a = [(1, 2), (3, 4), (5, 6), (7, 8)]\n",
+    "func_key = lambda x: x[1]\n",
+    "b = groupby(a, func_key)\n",
+    "for i, k in b:\n",
+    "    print(i, list(k))\n",
+    "    \n",
+    "people = ((\"John\", \"Peter\"), (), (), ())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cf47888-d37f-4004-80dc-0f8b77d9fadc",
    "metadata": {},
    "outputs": [],
    "source": []
