Finished tutorial, check official docs for skipped methods.

--- a/edureka_itertools1.ipynb
+++ b/edureka_itertools1.ipynb
@@ -970,15 +970,99 @@
     "func_key = lambda x: x[1]\n",
     "b = groupby(a, func_key)\n",
     "for i, k in b:\n",
-    "    print(i, list(k))\n",
-    "    \n",
-    "people = ((\"John\", \"Peter\"), (), (), ())"
+    "    print(i, list(k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "9cf47888-d37f-4004-80dc-0f8b77d9fadc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'B', 'C')\n",
+      "('A', 'C', 'B')\n",
+      "('B', 'A', 'C')\n",
+      "('B', 'C', 'A')\n",
+      "('C', 'A', 'B')\n",
+      "('C', 'B', 'A')\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "permutations()\n",
+    "\n",
+    "    Return successive r length permutations of elements in the iterable.\n",
+    "\n",
+    "    If r is not specified or is None, then r defaults to the length of the iterable and all possible full-length permutations are generated.\n",
+    "\n",
+    "    The permutation tuples are emitted in lexicographic ordering according to the order of the input iterable. So, if the input iterable is sorted, \n",
+    "    the combination tuples will be produced in sorted order.\n",
+    "\n",
+    "    Elements are treated as unique based on their position, not on their value. So if the input elements are unique, there will be no repeat \n",
+    "    values in each permutation.\n",
+    "\"\"\"\n",
+    "a = \"ABC\"\n",
+    "b = permutations(a, 3)\n",
+    "for i in b:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "16881192-ea86-4766-a1ee-3b8a2500853b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'B')\n",
+      "('A', 'C')\n",
+      "('B', 'C')\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = combinations(a, 2)\n",
+    "for i in c:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "70a9c7e3-2645-428b-8f25-3aa0b59acd4a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'A')\n",
+      "('A', 'B')\n",
+      "('A', 'C')\n",
+      "('B', 'B')\n",
+      "('B', 'C')\n",
+      "('C', 'C')\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = combinations_with_replacement(a, 2)\n",
+    "for i in d:\n",
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9cf47888-d37f-4004-80dc-0f8b77d9fadc",
+   "id": "f9ff5758-7873-4a15-9948-006727bb7201",
    "metadata": {},
    "outputs": [],
    "source": []
